2012-10-16 tct1501 <cyclonus@lavabit.com>

    * partial nl.po

2012-09-10 IgnorantGuru <ignorantguru@users.sourceforge.net>

    * POTFILES.in updated for cust-dialog.c cust-dialog.h

2012-07-16 Vladimir Kudrya <vladimir-csp@yandex.ru>

    * completed ru.po

2012-06-24 Tomas Forsman <tforsman@foresightlinux.se>

    * partially completed new sv.po

2012-06-13 Jean-Philippe Fleury <contact@jpfleury.net>

    * updated fr.po

2012-02-08 IgnorantGuru <ignorantguru@users.sourceforge.net>

    * spacefm POTFILES.in and translatable strings updated

2009-04-27 Og Maciel <ogmaciel@gnome.org>

    * pt_BR.po: Updated Brazilian Portuguese translation by
    Henrique P. Machado.

2009-01-26 Og Maciel <ogmaciel@gnome.org>

    * pcmanfm.pot: Updated.
    * POTFILES.in: Updated.
    * pt.po: Renamed from pt_PT.po as there is no pt_PT.
    * .po: Updated all message catalogs against the updated pcmanfm.pot file.
    * LINGUAS: Added with available languages.