@@ -1,3 +1,7 @@
+2012-10-25 IgnorantGuru <ignorantguru@gmx.com>
+
+    * POTFILES.in updated for prefdlg2.ui
+
 2012-10-16 tct1501 <cyclonus@lavabit.com>
 
     * partial nl.po
